// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "pers.mtx.grpc.mtcrud";
option java_outer_classname = "mtcrudProto";
option objc_class_prefix = "RTG";

package mtCrud;

service MtCrud {
  rpc GetData(GetParams) returns (stream Data) {}
  rpc PostData(PostParams) returns (Info) {}
  rpc PutData(PutParams) returns (Info) {}
  rpc DelData(DelParams) returns (Info) {}

  rpc ATDelData(DelParams) returns (ATTransactionId) {}
  rpc ATPostData(PostParams) returns (ATTransactionId) {}
  rpc ATPutData(PutParams) returns (ATTransactionId) {}
  rpc ConfirmAT(ATTransactionId) returns (Info) {}
  rpc RollbackAT(ATTransactionId) returns (Info) {}
}

message Data{
  map<string, string> dataMap = 1;
}

message ATTransactionId{
  int64 ATId = 1;
}

message Info{
  string info = 1;
}

message GetParams{
  map<string, string> order = 1;
  string  limit = 2;
  repeated string cols = 3;
  string dbName = 4;
  string tbName = 5;
  map<string, string> eq = 6;
  map<string, string> gt = 7;
  map<string, string> lt = 8;
  map<string, string> like = 9;
}
message PostParams{
  string id = 1;
  string ct = 2;
  string ut = 3;
  string dbName = 4;
  string tbName = 5;
  map<string, string> valueMap = 6;
}
message PutParams{
  Condition condition = 1;
  map<string, string> valueMap = 2;
  string dbName = 3;
  string tbName = 4;
}
message DelParams{
  string dbName = 3;
  string tbName = 4;
  map<string, string> eq = 6;
  map<string, string> gt = 7;
  map<string, string> lt = 8;
  map<string, string> like = 9;
}

message Condition{
  map<string, string> eq = 1;
  map<string, string> gt = 2;
  map<string, string> lt = 3;
  map<string, string> like = 4;
}